# dynamous_module_1

./: .gitattributes  .gitignore  updates.md
app/backend/: .gitignore  pyproject.toml  run_api.py
app/backend/app/: __init__.py  main.py
app/backend/app/api/: __init__.py  products.py
app/backend/app/core/: config.py  logging_config.py
app/backend/app/data/: __init__.py  seed_products.py
app/backend/app/models/: __init__.py  error.py  product.py
app/backend/app/services/: __init__.py  product_service.py
app/backend/tests/: __init__.py  conftest.py  test_products_basic.py  test_products_filtering.py
app/frontend/: biome.json  package.json
app/frontend/src/: APITester.tsx  App.tsx
app/frontend/src/components/: FilterPanel.tsx  ProductCard.tsx  ProductGrid.tsx
app/frontend/src/components/ui/: button.tsx  form.tsx  label.tsx  select.tsx
app/frontend/src/lib/: api-client.ts  logger.ts
app/frontend/src/types/: error.ts  product.ts
