[project]
name = "product-catalog-api"
version = "0.1.0"
description = "E-commerce product catalog API - Module 1 Exercise"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "ruff>=0.8.4",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Ruff configuration for linting and formatting
[tool.ruff]
line-length = 120
target-version = "py312"

# Enable auto-fixing where possible
fix = true

# Exclude common directories
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable essential rule sets for clean, maintainable code
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modernize Python code)
    "B",   # flake8-bugbear (find likely bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Ignore specific rules that conflict with our patterns
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatically detect line ending style
line-ending = "auto"
